alignment issues

--- a/mysite/static/assets/css/style.css
+++ b/mysite/static/assets/css/style.css
@@ -677,7 +677,7 @@ section {
 # About Us
 --------------------------------------------------------------*/
 .about {
-  padding: 140px 0;
+  padding: 40px 0;
   background: url("../img/about-bg.png") top center no-repeat;
   position: relative;
 }
